@@ -1,3 +1,8 @@
+10/09/2011 Changes
+
+Removed trailing separator from source paths.
+
+
 08/09/2011 Changes
 
 Changed use of "/" in some places to use File.separator, so things work on windows.
